[gd_scene load_steps=12 format=3 uid="uid://btyec4dnrw30"]

[ext_resource type="Script" path="res://Scenes/Enemies/TankEnemy/enemyShipTankScript.gd" id="1_sthnm"]
[ext_resource type="Texture2D" uid="uid://cgdf27dqev55r" path="res://Scenes/Enemies/TankEnemy/enemyCanonShip.png" id="2_q7bio"]
[ext_resource type="Script" path="res://Scenes/Enemies/TankEnemy/hitAreaScript.gd" id="3_a81fh"]
[ext_resource type="AudioStream" uid="uid://bb1rmnlwihixh" path="res://Scenes/Enemies/deathEnemySFX.mp3" id="4_mcksu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_drxww"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rawdy"]
radius = 7.64853

[sub_resource type="CircleShape2D" id="CircleShape2D_qfly4"]
radius = 8.34

[sub_resource type="Animation" id="Animation_owflp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}

[sub_resource type="Animation" id="Animation_ajj88"]
resource_name = "deathAnimation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.4, 0.4, 0.4, 1), Color(0.4, 0.4, 0.4, 0)]
}

[sub_resource type="Animation" id="Animation_35l3l"]
resource_name = "takeDamage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.721569, 0, 0.0705882, 1), Color(1, 1, 1, 1), Color(0.737255, 0, 0.054902, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ytj6p"]
_data = {
"RESET": SubResource("Animation_owflp"),
"deathAnimation": SubResource("Animation_ajj88"),
"takeDamage": SubResource("Animation_35l3l")
}

[node name="CharacterBody2D" type="CharacterBody2D" groups=["onPlayerDeath", "onPlayerWin"]]
scale = Vector2(3, 3)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_sthnm")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-12.3333, 0)

[node name="Sprite2D" type="Sprite2D" parent="." groups=["enemyTargetGroup"]]
texture_filter = 1
rotation = -1.5708
scale = Vector2(0.32, 0.32)
texture = ExtResource("2_q7bio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_drxww")

[node name="hitArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_a81fh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitArea"]
shape = SubResource("CircleShape2D_rawdy")
debug_color = Color(0.815686, 0.403922, 0, 0.419608)

[node name="atkArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="atkArea"]
shape = SubResource("CircleShape2D_qfly4")
debug_color = Color(0.65098, 0.00392157, 0, 0.419608)

[node name="slowMovement" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="animationEnemy" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ytj6p")
}

[node name="deathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="deathEnemySFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mcksu")

[connection signal="area_entered" from="atkArea" to="." method="_on_atk_area_area_entered"]
[connection signal="timeout" from="slowMovement" to="." method="_on_slow_movement_timeout"]
[connection signal="timeout" from="deathTimer" to="." method="_on_death_timer_timeout"]
